SDKs/googleapis.com/adexchangebuyer/v1.3/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.AdexchangebuyerAccountsGetRequest(
    security=operations.AdexchangebuyerAccountsGetSecurity(
        oauth2=shared.SchemeOauth2(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        )
        oauth2c=shared.SchemeOauth2c(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        ),
    ),
    path_params=operations.AdexchangebuyerAccountsGetPathParams(
        id=5544575166878453129,
    ),
    query_params=operations.AdexchangebuyerAccountsGetQueryParams(
        alt="json",
        fields="corporis",
        key="et",
        oauth_token="molestiae",
        pretty_print=True,
        quota_user="sed",
        user_ip="voluptatibus",
    ),
)
    
res = s.accounts.adexchangebuyer_accounts_get(req)

if res.account is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### accounts

* `adexchangebuyer_accounts_get` - Gets one account by ID.
* `adexchangebuyer_accounts_list` - Retrieves the authenticated user's list of accounts.
* `adexchangebuyer_accounts_patch` - Updates an existing account. This method supports patch semantics.
* `adexchangebuyer_accounts_update` - Updates an existing account.

### billingInfo

* `adexchangebuyer_billing_info_get` - Returns the billing information for one account specified by account ID.
* `adexchangebuyer_billing_info_list` - Retrieves a list of billing information for all accounts of the authenticated user.

### budget

* `adexchangebuyer_budget_get` - Returns the budget information for the adgroup specified by the accountId and billingId.
* `adexchangebuyer_budget_patch` - Updates the budget amount for the budget of the adgroup specified by the accountId and billingId, with the budget amount in the request. This method supports patch semantics.
* `adexchangebuyer_budget_update` - Updates the budget amount for the budget of the adgroup specified by the accountId and billingId, with the budget amount in the request.

### creatives

* `adexchangebuyer_creatives_get` - Gets the status for a single creative. A creative will be available 30-40 minutes after submission.
* `adexchangebuyer_creatives_insert` - Submit a new creative.
* `adexchangebuyer_creatives_list` - Retrieves a list of the authenticated user's active creatives. A creative will be available 30-40 minutes after submission.

### directDeals

* `adexchangebuyer_direct_deals_get` - Gets one direct deal by ID.
* `adexchangebuyer_direct_deals_list` - Retrieves the authenticated user's list of direct deals.

### performanceReport

* `adexchangebuyer_performance_report_list` - Retrieves the authenticated user's list of performance metrics.

### pretargetingConfig

* `adexchangebuyer_pretargeting_config_delete` - Deletes an existing pretargeting config.
* `adexchangebuyer_pretargeting_config_get` - Gets a specific pretargeting configuration
* `adexchangebuyer_pretargeting_config_insert` - Inserts a new pretargeting configuration.
* `adexchangebuyer_pretargeting_config_list` - Retrieves a list of the authenticated user's pretargeting configurations.
* `adexchangebuyer_pretargeting_config_patch` - Updates an existing pretargeting config. This method supports patch semantics.
* `adexchangebuyer_pretargeting_config_update` - Updates an existing pretargeting config.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
